Added twitter login

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,1 +1,7 @@
 <h2>Home page</h2>
+
+<h3>user</h3>
+<pre>{{user|json}}</pre>
+
+<button ng-click="login.twitter()">login with twitter</button>
+<button ng-click="login.github()">login with github</button>
