Added save profile functionality

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -8,5 +8,5 @@
 
 
 <button data-ng-click="login.twitter()">login with twitter</button>
-<button data-ng-click="login.github()">login with github</button>
+<!-- <button data-ng-click="login.github()">login with github</button> -->
 
