--- a/app/partials/profile.html
+++ b/app/partials/profile.html
@@ -6,7 +6,7 @@
 
 <h2>PROFILE</h2>
 
-{{profile|json}}
+{{profile.description}}
 
 <form data-ng-submit="save()" data-ng-controller="ProfileController">
 <label>{{NEA}} Profile Description</label>
