--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -4,7 +4,7 @@
 <body>
   <div class="row">
     <div class="large-12 columns">
-      <h2>Never Eat Alone</h2>
+      
       <hr />
     </div>
   </div>
@@ -54,7 +54,7 @@
     </div>
     </div>
     <div class="large-4 columns">
-      <h4></h4>
+      <h5>Sign up or Login with</h5>
       <button data-ng-click="login.twitter()">twitter</button>
       <button data-ng-click="login.github()">github</button>
       <h4>Users..</h4>
@@ -64,7 +64,4 @@
       </ul>
     </div>
   </div>
-
-<button data-ng-click="login.twitter()">login with twitter</button>
-<button data-ng-click="login.github()">login with github</button>
 
