--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,10 +1,10 @@
 
 <ng-include src="'partials/nav.html'"></ng-include>
 
-<body>
+
   <div class="row">
     <div class="large-12 columns">
-      
+      <h2>Never Eat Alone</h2>
       <hr />
     </div>
   </div>
@@ -13,6 +13,13 @@
     <div class="large-8 columns">
       <h3>Get a free lunch and teach some new skillz</h3>
       <p>Never eat alone is a network of technical people all waiting for a free lunch.  In return for buying lunch you get to fire off questions about their technical subjects.</p>
+      <div class="row">
+<!--	<div class="large-12 columns">
+	  <div class="panel">
+            <p>Sign up and get access to techinal engineers in your area</p>
+       	  </div>
+	</div>
+-->      </div>
       <div class="row">
 	<div class="large-6 columns">
           <p>Sign up now, add your skills, and eat for free!</p>
@@ -47,7 +54,7 @@
     </div>
     </div>
     <div class="large-4 columns">
-      <h5>Sign up or Login with</h5>
+      <h4></h4>
       <button data-ng-click="login.twitter()">twitter</button>
       <button data-ng-click="login.github()">github</button>
       <h4>Users..</h4>
@@ -58,3 +65,7 @@
     </div>
   </div>
 
+<button data-ng-click="login.twitter()">login with twitter</button>
+<button data-ng-click="login.github()">login with github</button>
+
+<a href="#/create">create event</a>
