--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -68,4 +68,16 @@
 <button data-ng-click="login.twitter()">login with twitter</button>
 <button data-ng-click="login.github()">login with github</button>
 
+<h3>Your events</h3>
+<!-- <pre>{{events|json}}</pre> -->
+
+<ul>
+	<li data-ng-repeat="(key,event) in events"><a href="#/event/{{key}}">{{event.description}} ({{event.location}})</li>
+</ul>
+
+<h3>Your invites</h3>
+<ul>
+	<li data-ng-repeat="(key,invite) in invites"><a href="#/invite/{{key}}">{{invite.description}} ({{invite.location}})</li>
+</ul>
+
 <a href="#/create">create event</a>
