--- a/app/partials/create.html
+++ b/app/partials/create.html
@@ -7,6 +7,10 @@
 <form data-ng-submit="createEvent()" class="">
 	<label>Description</label>
 	<input type="textarea" ng-model="description" />
+
+	<label>Location</label>
+	<input type="text" ng-model="location" />
+
 	<label>Skills you need help with</label>
 
 	<ul>
