--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -4,7 +4,7 @@
 
   <div class="row">
     <div class="large-12 columns">
-      <h2>Never Eat Alone</h2>
+      <!--<h2>Never Eat Alone</h2>-->
       <hr />
     </div>
   </div>
@@ -13,48 +13,18 @@
     <div class="large-8 columns">
       <h3>Get a free lunch and teach some new skillz</h3>
       <p>Never eat alone is a network of technical people all waiting for a free lunch.  In return for buying lunch you get to fire off questions about their technical subjects.</p>
-      <div class="row">
-<!--	<div class="large-12 columns">
-	  <div class="panel">
-            <p>Sign up and get access to techinal engineers in your area</p>
-       	  </div>
-	</div>
--->      </div>
+      <div class="row"></div>
       <div class="row">
 	<div class="large-6 columns">
           <p>Sign up now, add your skills, and eat for free!</p>
         </div>
         <div class="large-6 columns">
-	  <div class="panel">
-            <p>Six columns</p>
-	  </div>
+          <a href="#/create"  class="button round">create event</a>
         </div>
       </div>
-    <div class="row">
-      <div class="large-4 columns">
-        <div class="panel">
-          <p>Four columns</p>
-	</div>
-      </div>
-      <div class="large-4 columns">
-        <div class="panel">
-	  <p>Four columns</p>
-	</div>
-      </div>
-      <div class="large-4 columns">
-	<div class="panel">
-	  <p>Four columns</p>
-	</div>
-      </div>
-    </div>
-    <h3></h3>
-    <div class="row">
-      <div class="large-6 columns"></div>
-      <div class="large-6 columns"></div>
-    </div>
     </div>
     <div class="large-4 columns">
-      <h4></h4>
+      <h4>Sign up or Login</h4>
       <button data-ng-click="login.twitter()">twitter</button>
       <button data-ng-click="login.github()">github</button>
       <h4>Users..</h4>
@@ -65,19 +35,15 @@
     </div>
   </div>
 
-<button data-ng-click="login.twitter()">login with twitter</button>
-<button data-ng-click="login.github()">login with github</button>
-
-<h3>Your events</h3>
-<!-- <pre>{{events|json}}</pre> -->
-
-<ul>
-	<li data-ng-repeat="(key,event) in events"><a href="#/event/{{key}}">{{event.description}} ({{event.location}})</li>
-</ul>
-
-<h3>Your invites</h3>
-<ul>
-	<li data-ng-repeat="(key,invite) in invites"><a href="#/invite/{{key}}">{{invite.description}} ({{invite.location}})</li>
-</ul>
-
-<a href="#/create">create event</a>
+  <div class="row">
+    <div class="large-6 columns"></div>
+    <h3>Your events</h3>
+    <!-- <pre>{{events|json}}</pre> -->
+  <ul>
+    <li data-ng-repeat="(key,event) in events"><a href="#/event/{{key}}">{{event.description}} ({{event.location}})</li>
+  </ul>
+  <h3>Your invites</h3>
+  <ul>
+    <li data-ng-repeat="(key,invite) in invites"><a href="#/invite/{{key}}">{{invite.description}} ({{invite.location}})</li>
+  </ul>
+  </div>
