--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="large-8 columns">
       <h3>Get a free lunch and teach some new skillz</h3>
-      <p>Never eat alone is a network of technical people all waiting for a free lunch.  In return for buying lunch you get to fire off questions about their technical subjects.</p>
+      <p>Never eat alone is a network of technical people all waiting for a free lunch.  In return for buying lunch you get to fire off questions about your tech issues, what could be more fun?</p>
       <div class="row"></div>
       <div class="row">
 	<div class="large-6 columns">
