Added when field to home page

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -38,12 +38,12 @@
     <div class="large-6 columns"></div>
     <h3 data-ng-if="(events|keyCount) > 0">Your events</h3>
   <ul>
-    <li data-ng-repeat="(key,event) in events"><a href="#/event/{{key}}">{{event.description}} ({{event.location}})</a>
+    <li data-ng-repeat="(key,event) in events"><a href="#/event/{{key}}">{{event.description}} ({{event.location}})</a> - {{event.when}}
     </li>
   </ul>
   <h3 data-ng-if="(invites|keyCount) > 0">Your invites</h3>
   <ul>
-    <li data-ng-repeat="(key,invite) in invites"><a href="#/invite/{{key}}">{{invite.description}} ({{invite.location}})</a>
+    <li data-ng-repeat="(key,invite) in invites"><a href="#/invite/{{key}}">{{invite.description}} ({{invite.location}}) - {{invite.when}}</a>
       <a data-ng-if="invite.attendee_uid != user.uid" class="button" data-ng-click="join(key)">join</a>
       <a data-ng-if="invite.attendee_uid == user.uid" class="button success">attending</a>
     </li>
