--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,23 @@
 ul ul{
 	list-style:none !important;
 }
+
+.nav-bar {
+    background: #0091A1;
+    height: 40px;
+    margin-left: 0;
+    margin-top: 20px;
+    padding: 0;
+}
+
+body {
+  background: black;
+  color: #5da423;
+  padding: 0;
+  margin: 0;
+  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1;
+  position: relative;
+  cursor: default; }
