--- a/app/partials/profile.html
+++ b/app/partials/profile.html
@@ -10,8 +10,9 @@
     <div class="large-6 columns"></div>
     <div class="large-6 columns"></div>
   </div>
-    <label>{{NEA}} About me</label>
+    <label>About me</label>
     <input data-ng-model="profile.description" type="text" />
+
     <div class="row">
       <h3>Select your skillz..</h3>
       <div class="large-6 small-6 columns">
