--- a/app/css/app.css
+++ b/app/css/app.css
@@ -4,11 +4,22 @@ ul ul{
 
 .nav-bar {
     background: #0091A1;
-    height: 40px;
+    height: 50px;
     margin-left: 0;
     margin-top: 20px;
     padding: 0;
 }
+.top-bar{
+  height:50px;
+}
+.userProfile{
+  width:200px;
+}
+.userProfile img{
+  height:50px;
+  margin-right:10px;
+}
+
 
 body {
   background: #2b2b2b;
