--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -3,7 +3,7 @@
 <ul class="title-area">
   <!-- Title Area -->
   <li class="name">
-    <h1><a href="#">Never Eat Alone</a></h1>
+    <h1><a href="#">Never L:unch Solo</a></h1>
   </li>
   <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
   <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -14,7 +14,7 @@
     <!-- Right Nav Section -->
     <ul class="right">
       <!-- <pre>{{user|json}}</pre> -->
-      <li data-ng-if="user.uid != null"><img class="left" data-ng-src="{{user.avatar}}" /><a href="#/profile">My Profile</a></li>
+      <li data-ng-if="user.uid != null" class="userProfile"><img class="left" data-ng-src="{{user.avatar}}" /><a href="#/profile">My Profile</a></li>
       <li class="divider show-for-small"></li>
       <li data-ng-if="user.uid != null" class="has-form">
         <a class="button" data-ng-click="login.logout()" href=#>Logout</a></li>
