--- a/app/partials/profile.html
+++ b/app/partials/profile.html
@@ -1,34 +1,34 @@
 <ng-include src="'partials/nav.html'"></ng-include>
 
 <div class="row">
-  <div class="large-6 columns"></div>
-  <div class="large-6 columns"></div>
-  <hr />
-  <h3>Your profile</h3>
-  <form class="custom" data-ng-submit="save()" data-ng-controller="ProfileController">
+  
   <div class="row">
-    <div class="large-6 columns"></div>
-    <div class="large-6 columns"></div>
-  </div>
-    <label>About me</label>
-    <input data-ng-model="profile.description" type="text" />
+    <div class="large-12 columns">
+      <h3>Your profile</h3>
+      <form class="custom" data-ng-submit="save()" data-ng-controller="ProfileController">
+      
+        <label>About me</label>
+        <input data-ng-model="profile.description" type="text" />
 
-    <div class="row">
-      <h3>Select your skillz..</h3>
-      <div class="large-6 small-6 columns">
-      <ul>
-        <li data-ng-repeat="(key,skillArray) in profile.skillsMatrix">{{key}}
+        
+          <h3>Select your skillz..</h3>
+          <div class="large-6 small-6 columns">
+          
           <ul>
-            <div class="large-3 small-3 columns end">
-              <li data-ng-repeat="skill in skillArray"><input type="checkbox" id="{{skill}}" data-ng-model="profile.saveValue[skill]"/>
-                <label for={{skill}}>{{skill}}</label>  
-              </li>
-            </div>
+            <li data-ng-repeat="(key,skillArray) in profile.skillsMatrix">{{key}}
+              <ul>
+                <div class="large-3 small-3 columns end">
+                  <li data-ng-repeat="skill in skillArray"><input type="checkbox" id="{{skill}}" data-ng-model="profile.saveValue[skill]"/>
+                    <label for={{skill}}>{{skill}}</label>  
+                  </li>
+                </div>
+              </ul>
+            </li>
           </ul>
-        </li>
-      </ul>
-      </div>
-      <button>save</button>
-    </div>
-  </form>
+          
+
+          <button>save</button>
+        
+      </form>
+  </div>
 </div>
