update button on home page when you are attending an event

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -25,7 +25,7 @@
       <h4>Users..</h4>
       <p>Hungry users or perspective buyers?</p>
       <ul class="disc">
-  <li><a href="http://twitter.com/nevereatalone">@nevereatalone</a><br />Follow us on twitter.</li>
+  <li><a href="http://twitter.com/neverlunchsolo">@neverlunchsolo</a><br />Follow us on twitter.</li>
       </ul>
     </div>
   </div>
