Added when field to invite

--- a/app/partials/invite.html
+++ b/app/partials/invite.html
@@ -11,6 +11,9 @@
 			<label>Location</label>
 			<input type="text" disabled="disabled" data-ng-model="event.location" />
 
+			<label>When</label>
+			<input type="text" disabled="disabled" data-ng-model="event.when" />
+
 			<label>Skills Requested</label>
 			<ul>
 				<li data-ng-repeat="skill in event.skills">{{skill}}</li>
