--- a/app/partials/profile.html
+++ b/app/partials/profile.html
@@ -12,7 +12,7 @@
 
         
           <h3>Select your skillz..</h3>
-          <div class="large-6 small-6 columns">
+          <div class="large-12 columns">
           
           <ul>
             <li data-ng-repeat="(key,skillArray) in profile.skillsMatrix">{{key}}
