--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -32,7 +32,7 @@
 
   <div class="row">
     <div class="large-12 columns">
-      <h3 data-ng-if="(events|keyCount) > 0"><i class="icon-calendar"></i> Your events</h3>
+      <h3 class="underline" data-ng-if="(events|keyCount) > 0"><i class="icon-calendar"></i> Your events</h3>
     <ul>
       <li data-ng-repeat="(key,event) in events">
         <a href="#/event/{{key}}">{{event.description}} ({{event.location}})</a> - {{event.when}}
@@ -40,7 +40,7 @@
         <a class="button small" data-ng-if="event.attendee_uid == null">no-one wants to come.</a>
       </li>
     </ul>
-    <h3 data-ng-if="(invites|keyCount) > 0"><i class="icon-envelope"></i> Your invites</h3>
+    <h3 class="underline" data-ng-if="(invites|keyCount) > 0"><i class="icon-envelope"></i> Your invites</h3>
     <ul>
       <li data-ng-repeat="(key,invite) in invites" style="width:100%;">
         <a href="#/invite/{{key}}">{{invite.description}} ({{invite.location}}) - {{invite.when}}</a>
